Fix vertical-align settings

--- a/game/freecell.css
+++ b/game/freecell.css
@@ -93,13 +93,13 @@ td.right {
 td.center {
   line-height: 1.1;
   padding: 0;
-  vertical-align: center;
+  vertical-align: middle;
 }
 td.center_large, td.picture {
   font-size: 200%;
   line-height: 1.1;
   padding: 0;
-  vertical-align: center;
+  vertical-align: middle;
 }
 td.picture {
   transform: scale(1.5, 2.0);
@@ -137,7 +137,7 @@ div.options {
   opacity: 0.8;
   position: relative;
   text-align: center;
-  vertical-align: center;
+  vertical-align: middle;
   white-space: nowrap;
   z-index: 101;
 }
